fix: Use dynamic gap in c-card and c-login-buttons

--- a/packages/csc-ui/src/components/c-card-title/c-card-title.scss
+++ b/packages/csc-ui/src/components/c-card-title/c-card-title.scss
@@ -7,9 +7,10 @@
   --c-card-title-underline-color: var(--c-primary-600);
 
   color: var(--c-card-title-color);
-  padding: 0 var(--c-card-gap, 24px);
+  padding-inline: var(--c-card-gap, 24px);
   display: block;
-  font-size: 16px;
+  font-family: var(--c-font-family);
+  font-size: 1rem;
   font-weight: 500;
   text-transform: uppercase;
 }
