--- a/packages/csc-ui/src/components/c-card/c-card.scss
+++ b/packages/csc-ui/src/components/c-card/c-card.scss
@@ -3,7 +3,7 @@
    * @prop --c-card-gap: Card column gap / padding
    * @prop --c-card-background-color: Card background color
    */
-  --c-card-gap: 24px;
+  --c-card-gap: clamp(1rem, 2vw, 1.5rem);
   --c-card-background-color: var(--c-white);
 
   border-radius: 6px;
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--c-card-gap);
-  padding: var(--c-card-gap) 0;
+  padding-block: var(--c-card-gap);
   position: relative;
   background-color: var(--c-card-background-color);
 }
